Create the layout class that allows for searching the restaurant layout for certain table sizes, modifying table statuses by seating partys of guest and also adding moving and removing tables. Finaly it allows the caching of the layout to file. Still needs Database functionality. It is able to be used in all layouts that require the tables view and the restaurant layout.